# scarecrow-gnome-session

./: ChangeLog-20020212  ChangeLog-20080310  ChangeLog.pre-git  HACKING  README  gnome-session.doap  meson.build  meson_post_install.py  scarecrow-session.doap
data/: gnome-session.convert  gnome-wayland.desktop.in.in  gnome-xorg.desktop.in.in  gnome.desktop.in.in  io.github.scarecrow-de.SessionManager.gschema.xml.in  io.github.scarecrow_de.SessionManager.gschema.xml.in  meson.build  org.gnome.SessionManager.gschema.xml.in  scarecrow-custom-session.desktop.in.in  scarecrow-dummy.session.desktop.in.in  scarecrow-session-failed.service.in  scarecrow-session-failed.target  scarecrow-session-initialized.target  scarecrow-session-manager.target  scarecrow-session-manager@.service.in  scarecrow-session-monitor.service.in  scarecrow-session-pre.target  scarecrow-session-restart-dbus.service.in  scarecrow-session-shutdown.target  scarecrow-session-signal-init.service.in  scarecrow-session-wayland.target  scarecrow-session-wayland@.target  scarecrow-session-x11-services-ready.target  scarecrow-session-x11-services.target  scarecrow-session-x11.target  scarecrow-session-x11@.target  scarecrow-session.convert  scarecrow-session.target  scarecrow-session@.target  scarecrow-wayland.desktop.in.in  scarecrow-xorg.desktop.in.in  scarecrow.desktop.in.in  scarecrow.session.conf.in  scarecrow.session.desktop.in.in
doc/dbus/: gnome-session.xml.in  meson.build  scarecrow-session.xml.in
doc/man/: meson.build  scarecrow-session-inhibit.xml  scarecrow-session-quit.1  scarecrow-session-selector.xml  scarecrow-session.1
gnome-session/: README  gnome-session.in  gsm-app.c  gsm-autostart-app.c  gsm-client.c  gsm-dbus-client.c  gsm-inhibitor.c  gsm-manager.c  gsm-presence.c  gsm-session-save.c  gsm-shell-extensions.c  gsm-shell.c  main.c  meson.build  org.gnome.SessionManager.App.xml  org.gnome.SessionManager.Client.xml  org.gnome.SessionManager.ClientPrivate.xml  org.gnome.SessionManager.Inhibitor.xml  org.gnome.SessionManager.Presence.xml  org.gnome.SessionManager.xml  test-client-dbus.c  test-inhibit.c
po/: ChangeLog.pre-git  POTFILES.in  POTFILES.skip  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  ckb.po  crh.po  cs.po  csb.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  fy.po  (+74 more)
scarecrow-session/: README  gsm-app.c  gsm-app.h  gsm-autostart-app.c  gsm-autostart-app.h  gsm-client.c  gsm-client.h  gsm-consolekit.c  gsm-consolekit.h  gsm-dbus-client.c  gsm-dbus-client.h  gsm-fail-whale-dialog.c  gsm-fail-whale-dialog.h  gsm-fail-whale.c  gsm-fail-whale.h  gsm-icon-names.h  gsm-inhibitor.c  gsm-inhibitor.h  gsm-manager-logout-mode.h  gsm-manager.c  gsm-manager.h  gsm-presence-flag.h  gsm-presence.c  gsm-presence.h  gsm-process-helper.h  gsm-session-fill.c  gsm-session-fill.h  gsm-session-save.c  gsm-session-save.h  gsm-shell-extensions.c  gsm-shell-extensions.h  gsm-shell.c  gsm-shell.h  gsm-store.c  gsm-store.h  gsm-system.c  gsm-system.h  gsm-systemd.c  gsm-systemd.h  gsm-util.c  (+72 more)
tools/: gnome-session-ctl.c  gnome-session-inhibit.c  gnome-session-quit.c  gnome-session-selector.c  meson.build  scarecrow-session-check-accelerated-gl-helper.c  scarecrow-session-check-accelerated-gles-helper.c  scarecrow-session-check-accelerated.c  scarecrow-session-ctl.c  scarecrow-session-custom-session  scarecrow-session-inhibit.c  scarecrow-session-quit.c  scarecrow-session-selector.c
